--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "axois": "0.0.1-security",
+    "concurrently": "^6.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.7.1",
