--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,13 @@
     "classnames": "^2.2.6",
     "graphql": "^14.0.2",
     "moment": "^2.22.2",
-    "react": "^16.6.1",
+    "react": "^16.13.1",
     "react-apollo": "^2.2.4",
-    "react-dom": "^16.6.1",
+    "react-dom": "^16.13.1",
     "react-moment": "^0.8.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-bootstrap": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
