--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "axois": "0.0.1-security",
+    "bootstrap": "^5.0.1",
     "concurrently": "^6.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.7.1",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "react-bootstrap": "^1.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
